kubernetes/apps/talos1018/media/music-assistant/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: music-assistant
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Apps
    gethomepage.dev/icon: sh-music-assistant.svg
    gethomepage.dev/name: Music Assistant
    gethomepage.dev/app: music-assistant
spec:
  parentRefs:
    - name: main-gateway
      namespace: network
  hostnames:
    - "mass.${CLUSTER_DOMAIN}"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: music-assistant-app
          port: 8095
